Fix: layout issues

--- a/styles/general_mobile.css
+++ b/styles/general_mobile.css
@@ -14,6 +14,8 @@
   }
   #menu {
       cursor: pointer;
+      position:fixed;
+      top:2em;right:2em;
   }
   #popup {
     /* display: none; */
@@ -65,13 +67,14 @@
     overflow: hidden;
   }
   .w-100,
-  .w-75{
+  .w-75,.w-50,
+  .w-25{
     width: calc(100% - 1em);
   }
-  .w-50,
+  /* .w-50,
   .w-25 {
     width: calc(75% - 1em);
-  }
+  } */
 
   .w-100-no-padding,
   .w-75-no-padding,
@@ -100,11 +103,18 @@
   }
   /* menu bar */
   #navigation {
+    background-color: white;
     display: none;
-    margin:0.25em;
+    margin:0 auto;
+    width:90%;
+    position:fixed;
+    top:4em;z-index:999999999999;
   }
   #navigation span{
       width:100%;
+  }
+  #navigation span.round-corner{
+    border-radius: 0;
   }
   #secondary_navigation,#footer-impact{
     display: none;
@@ -249,6 +259,22 @@
     /* background-color: black; */
     background-repeat: repeat;
   }
+  .bg-service1 {
+    background-image: url("../images/service1_.jpg");
+    background-size: cover;
+  }
+  .bg-service2 {
+    background-image: url("../images/service2_.jpg");
+    background-size: cover;
+  }
+  .bg-service3 {
+    background-image: url("../images/service3_.jpg");
+    background-size: cover;
+  }
+  .bg-service4 {
+    background-image: url("../images/service4_.jpg");
+    background-size: cover;
+  }
   .bg-img-header1 {
     background-image: url("../images/header1.jpg");
     background-size: cover;
@@ -361,7 +387,7 @@
     justify-content: flex-start;
   }
   .flex-end {
-    justify-content: flex-end;
+    /* justify-content: flex-end; */
   }
   .flex-between {
     justify-content: space-between;
@@ -411,13 +437,24 @@
 
   .squares > img {
     width: calc(100% - 10px);
-    margin: 5px;
+    margin: 2px;
   }
-
+  .news-card {
+    min-width: 280px;
+    cursor: pointer;
+  }
+  .news-card:hover {
+    background-color: #132a86;
+    opacity: 0.4;
+  }
+  .box-list {
+    margin: 1em;
+    min-width: 200px;
+  }
   .vspacer {
     display: block;
     width: 100%;
-    height: 30px;
+    height: 0px;
   }
   .hidden {
     display: none;
